tooling/nargo_cli/tests/snapshots/execution_success/brillig_arrays/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: [Field; 3]) {
    // Safety: comment added by `nargo expand`
    unsafe {
        read_array(x);
        read_write_array(x);
    }
}

unconstrained fn read_array(x: [Field; 3]) {
    assert(x[0] == 1);
    let y: [Field; 3] = [1, 5, 27];
    assert(y[x[0] as u32] == 5);
}

unconstrained fn read_write_array(x: [Field; 3]) {
    let mut y: [Field; 3] = x;
    y[0] = 5;
    assert(y[0] == 5);
    assert(y[1] == 2);
    assert(y[2] == 3);
    assert(x[0] == 1);
    assert(x[1] == 2);
    assert(x[2] == 3);
}
